--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-emu6502 = { git = "https://github.com/naari3/emu6502", rev = "bbff5e8" }
+emu6502 = { git = "https://github.com/naari3/emu6502", rev = "9c01cc7", features = ["logging"] }
 image = "0.23.13"
