--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-emu6502 = { git = "https://github.com/naari3/emu6502", rev = "d4f1ae3" }
+# emu6502 = { git = "https://github.com/naari3/emu6502", rev = "b481518", features = ["logging"] }
+emu6502 = { git = "https://github.com/naari3/emu6502", rev = "b481518" }
 image = "0.23.13"
