--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 # emu6502 = { git = "https://github.com/naari3/emu6502", rev = "b481518", features = ["logging"] }
 emu6502 = { git = "https://github.com/naari3/emu6502", rev = "b481518" }
 image = "0.23.13"
+piston_window = "*"
