Implement rom opener

--- a/standalone/Cargo.toml
+++ b/standalone/Cargo.toml
@@ -12,6 +12,7 @@ image = "0.23.13"
 # pprof = { version = "0.4", features = ["flamegraph"] }
 piston_window = "*"
 fps_counter = "2.0.0"
+nfd = "0.0.4"
 
 [profile.release]
 debug = true
